Closed formula / Fix p(z1, z2, T/N) for barrier / logging module / debug / plots

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@
 *.app
 .vscode/settings.json
 
-# all files that start with results
-results*
+# simulation files
+results_*
+debug_*
 .vscode/launch.json
 .vscode/tasks.json
